# arlab

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: BUG.yml  FEATURE.yml  ISSUE.yml
.github/workflows/: linter.yml
code/arlab_asyncio_executor/: package.xml  setup.cfg  setup.py
code/arlab_asyncio_executor/arlab_asyncio_executor/: executors.py
code/arlab_bringup/: package.xml  setup.cfg  setup.py
code/arlab_bringup/arlab_bringup/: dummy.py
code/arlab_common/: package.xml  setup.cfg  setup.py
code/arlab_common/arlab_common/: dummy.py
code/arlab_common_interfaces/: CMakeLists.txt  package.xml
code/arlab_common_interfaces/msg/: DeleteMe.msg
code/arlab_computer_vision/: package.xml  setup.cfg  setup.py
code/arlab_computer_vision/arlab_computer_vision/: dummy.py  image_processing_node.py  object_detection.py
code/arlab_decision_making/: package.xml  requirements.txt  setup.cfg  setup.py
code/arlab_decision_making/arlab_decision_making/: decision_maker.py  dummy.py
code/arlab_decision_making/arlab_decision_making/behaviours/common/: ros_action.py
code/arlab_knowledge/: package.xml  requirements.txt  setup.cfg  setup.py
code/arlab_knowledge/arlab_knowledge/: database_node.py  dummy.py
code/arlab_knowledge/arlab_knowledge/db/: __init__.py  base.py  map.py  status.py
code/arlab_knowledge/arlab_knowledge/db/entities/: __init__.py  entity.py  furniture.py  human.py  pickable.py  shape.py
code/arlab_knowledge/arlab_knowledge/db/ros_adapters/: occupancy_grid.py  pose.py  time.py
code/arlab_knowledge/arlab_knowledge/entities/: __init__.py  entity.py  furniture.py  human.py  pickable.py  shape.py
code/arlab_knowledge/arlab_knowledge/ros_adapters/: pose.py
code/arlab_knowledge_interfaces/: CMakeLists.txt  package.xml
code/arlab_knowledge_interfaces/msg/: EntityType.msg  Result.msg
code/arlab_knowledge_interfaces/srv/: AddCupboard.srv  AddDoor.srv  AddEntity.srv  AddFurniture.srv  AddHuman.srv  AddPickable.srv  AddShelf.srv  AddTable.srv  DelEntities.srv  DoorGetOpen.srv  DoorGetWidth.srv  GetDescription.srv  GetEntities.srv  GetPose.srv  GetReference.srv  GetShape.srv  UpdCupboard.srv  UpdDoor.srv  UpdEntity.srv  UpdHuman.srv  UpdPickable.srv  UpdPose.srv  UpdShape.srv  UpdShelf.srv
code/arlab_manipulation/: package.xml  setup.cfg  setup.py
code/arlab_manipulation/arlab_manipulation/: GetGrippingForce.py  MoveItGoalPublisher.py  dummy.py
code/arlab_manipulation/srv/: GetGrippingForce.srv
code/arlab_manipulation_cpp/: CMakeLists.txt  package.xml
code/arlab_manipulation_cpp/src/: Ur5MoveToGoal.cpp  arlab_manipulation_cpp.cpp
code/arlab_movement/: arlab_movement_deps.repos  package.xml  setup.cfg  setup.py
code/arlab_movement/arlab_movement/: dummy.py
code/arlab_perception/: package.xml  setup.cfg  setup.py
code/arlab_perception/arlab_perception/: dummy.py
code/arlab_safety/: package.xml  setup.cfg  setup.py
code/arlab_safety/arlab_safety/: central_safety_node.py  dummy.py
code/arlab_speech_controller/: package.xml  setup.cfg  setup.py
code/arlab_speech_controller/arlab_speech_controller/: dummy.py
code/arlab_template_interfaces/: CMakeLists.txt  package.xml
code/arlab_templates/: package.xml  setup.cfg  setup.py
code/arlab_templates/arlab_templates/: template_local_safety.py  template_node.py  template_pubsub.py  template_service.py  template_service_client.py
code/arlab_vizbox/: package.xml  setup.cfg  setup.py
code/arlab_vizbox/arlab_vizbox/: dummy.py
doc/: template_wiki_page.md
